graph headers now have anchors

--- a/templates/header.erb
+++ b/templates/header.erb
@@ -24,6 +24,10 @@
       h1 {
         text-align: center;
       }
+      h1 a {
+        color: #000;
+        text-decoration: none;
+      }
       .chart {
         width: 95%;
         height: 600px;
